Changes following last call
Awaiting new landing text summary

--- a/index.html
+++ b/index.html
@@ -131,96 +131,6 @@
     </section>
   
   <section id="section-1" class="pagesection">
-      <div class="container reveal fade-bottom">
-            <div class="content">
-                <div class="descriptions">
-                    <div class="title">
-                        Intelligent business execution system
-                    </div>
-<!--                     <div class="subtitle">
-                        <p>
-                            (Subtitle)
-                        </p>
-                    </div> -->
-                    <div class="text">
-                      <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> empowers
-                      Business Users to create and run Data Workloads to solve their problems and add value to the
-                      business. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
-                      not only enables insight to be gathered from data, whether internally or externally stored, but
-                      also, crucially, allows users to take corrective actions from that insight.
-                    </div>
-                </div>
-              <div class="visuals">
-                  <image class="reveal fade" src="img/valluu-red.svg" style="max-height: 400px;"></image>
-              </div>
-            </div>
-            <div class="aboutarrow">
-            </div>
-        </div>
-    </section>
-
-    <section id="section-2" class="pagesection">
-      <div class="container reveal fade-bottom">
-            <div class="content">
-              <div class="visuals">
-                  <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
-              </div>
-                <div class="descriptions">
-                    <div class="title">
-                        Why can't we exploit our data?
-                    </div>
-                    <div class="subtitle">
-                        <p>
-                            Unable to run your Data Workloads?
-                        </p>
-                    </div>
-                    <div class="text">
-                        A recent study* showed that 75% of employees are restricted when it comes to being able to exploit
-                        the potential of their company’s data. The current Business and IT solutions are complex, expensive,
-                        and unable to meet the pressures on the ever increasing demands for the use of data, and the Business
-                        and IT functions are separated into two silos, with a large gap in between, and so they are
-                        collectively unable to meet the demands of the business in the required timeframe.
-                    </div>
-                    <div class="notes">
-                        <p>*The Human Impact of Data Literacy - Report 2020 - Accenture</p>
-                    </div>
-                </div>
-            </div>
-            <div class="aboutarrow">
-            </div>
-        </div>
-    </section>
-  
-  <section id="section-3" class="pagesection">
-        <div class="container reveal fade-bottom">
-            <div class="content">
-                <div class="descriptions">
-                    <div class="title">
-                        What do we mean by a 'Data Workload'?
-                    </div>
-                    <div class="subtitle">
-                        <p>Transformation of your data
-                        </p>
-                    </div>
-                    <div class="text">
-                        A Data Workload is a series of processes to your data, such as moving the data from one place to another
-                        whilst also transforming it along the way, among other use-cases. The goal of a <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
-                        Data Workload could be to automate the flow of data between various stages of processing, such as
-                        ingestion, cleansing, transformation, and storage. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
-                        Data Workloads can handle large volumes of data and enable organisations to process and analyse
-                        data in real-time, making it easier to make informed decisions and execute them.
-                    </div>
-                </div>
-                <div class="visuals">
-                    <image class="reveal fade" src="img/refactor-2.png" style="max-height: 400px;"></image>
-                </div>
-            </div>
-            <div class="aboutarrow">
-            </div>
-        </div>
-    </section>
-
-    <section id="section-4" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
@@ -273,7 +183,70 @@
         </div>
     </section>
 
-    <section id="section-5" class="pagesection reveal fade">
+    <section id="section-2" class="pagesection">
+      <div class="container reveal fade-bottom">
+            <div class="content">
+                <div class="descriptions">
+                    <div class="title">
+                        Why can't you exploit your data?
+                    </div>
+                    <div class="subtitle">
+                        <p>
+                            Unable to run your Data Workloads?
+                        </p>
+                    </div>
+                    <div class="text">
+                        A recent study* showed that 75% of employees are restricted when it comes to being able to exploit
+                        the potential of their company’s data. The current Business and IT solutions are complex, expensive,
+                        and unable to meet the pressures on the ever increasing demands for the use of data, and the Business
+                        and IT functions are separated into two silos, with a large gap in between, and so they are
+                        collectively unable to meet the demands of the business in the required timeframe.
+                    </div>
+                    <div class="notes">
+                        <p>*The Human Impact of Data Literacy - Report 2020 - Accenture</p>
+                    </div>
+                </div>
+              <div class="visuals">
+                  <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+              </div>
+            </div>
+            <div class="aboutarrow">
+            </div>
+        </div>
+    </section>
+  
+  <section id="section-3" class="pagesection">
+        <div class="container reveal fade-bottom">
+            <div class="content">
+              <div class="visuals">
+                    <image class="reveal fade" src="img/refactor-2.png" style="max-height: 400px;"></image>
+                </div>
+                <div class="descriptions">
+                    <div class="title">
+                        What do we mean by a 'Data Workload'?
+                    </div>
+                    <div class="subtitle">
+                        <p>Transformation of your data
+                        </p>
+                    </div>
+                    <div class="text">
+                        A Data Workload is a series of processes to your data, such as moving the data from one place to another
+                        whilst also transforming it along the way, among other use-cases. The goal of a <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                        Data Workload could be to automate the flow of data between various stages of processing, such as
+                        ingestion, cleansing, transformation, and storage. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                        Data Workloads can handle large volumes of data and enable organisations to process and analyse
+                        data in real-time, making it easier to make informed decisions and execute them.
+                    </div>
+                </div>
+            </div>
+            <div class="aboutarrow">
+            </div>
+        </div>
+    </section>
+
+    <!-- Here! -->
+
+    <section id="section-4" class="pagesection reveal fade">
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
@@ -296,7 +269,7 @@
         </div>
     </section>
   
-  <section id="section-6" class="pagesection reveal fade">
+  <section id="section-5" class="pagesection reveal fade">
         <div class="content">
             <div class="visuals reveal fade">
                 <img src="img/flow-pic-2.png" alt="" style="max-width: 300px;">
@@ -312,13 +285,13 @@
                     Currently, creating a Data Workload is a complex and time-consuming task, which is buried in the IT
                     organisation’s capability. With <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">,
                     you create workloads without the need to code by using our drag & drop interface. In addition, users
-                    can easily change and update source datasets, thus enabling the business to respond to events with true agility.
+                    can easily change and update source datasets, thus enabling your business to respond to events with true agility.
                 </div>
             </div>
         </div>
     </section>
   
-  <section id="section-7" class="pagesection reveal fade">
+  <section id="section-6" class="pagesection reveal fade">
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
@@ -346,7 +319,7 @@
         </div>
     </section>
   
-  <section id="section-8" class="pagesection reveal fade">
+  <section id="section-7" class="pagesection reveal fade">
         <div class="content">
             <div class="visuals reveal fade">
                 <img src="img/flow-pic-5.png" alt="" style="max-width: 300px;">
@@ -359,7 +332,7 @@
                     Fast scheduling with automated efficiencies
                 </div>
                 <div class="text">
-                    With today’s solutions, once a Data Workload has been created, a complex change procedure is often required
+                    With today’s solutions, once your Data Workload has been created, a complex change procedure is often required
                     with numerous levels of approval from people who have no context as to the criticality of the timing.
                     Additionally, current estimates show that up to 60% of all available compute capability is sat idle, with
                     services holding compute resources even when they are not running.
@@ -369,13 +342,13 @@
                     the resource whilst the workload is being run. Upon completion, it will automatically cleanse the footprint,
                     ensuring that all resources are released for other use and the cost of IT is not increased. This fast scheduling
                     can be done through Microsoft Teams or similar applications with simple natural-language commands – no need for
-                    complicated procedures or to get IT involved.
+                    complicated procedures or for you to get IT involved.
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="section-9" class="pagesection">
+    <section id="section-8" class="pagesection">
         <div class="democratization container">
             <div class="content">
                 <div class="descriptions reveal fade">
@@ -410,7 +383,7 @@
         </div>
     </section>
 
-    <section id="section-10" class="pagesection">
+    <section id="section-9" class="pagesection">
         <div class="solutionoverview container">
             <div class="content">
               <div class="visuals reveal fade">
@@ -497,7 +470,7 @@
   
   
 
-    <section id="section-11" class="pagesection">
+    <section id="section-10" class="pagesection">
         <div class="democratization container">
             <div class="content">
 
