--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -208,19 +208,19 @@
                         </p>
                     </div>
                     <div class="text">
-                        Some examples of how different business users could
+                        <!-- Some examples of how different business users could
                         use <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> to
                         unlock the potential of their company's data for their own needs...
-                            <br />
+                            <br /> -->
                             <span style="color: #E84249;"">COO:</span> Gain governance and control oversight of all data management
                             <br />
                             <span style="color: #E84249;"">CFO:</span> Implement corrective investments and cost management decisions
                             <br />
                             <span style="color: #E84249;"">CIO:</span> Create the ability to execute data changes by the business decision maker
                             <br />
-                            <span style="color: #E84249;"">Sales Manager:</span> Dynamically change pricing for customers
+                            <span style="color: #E84249;"">CRO</span> Dynamically change pricing for customers
                             <br />
-                            <span style="color: #E84249;"">Marketing Manager:</span> Create automated sales campaigns based on pricing changes
+                            <span style="color: #E84249;"">CMO:</span> Create automated sales campaigns based on pricing changes
                             <br />
                             <span style="color: #E84249;"">Business Analyst:</span> Reduce complexity of business transactions
                             <br />
@@ -254,7 +254,7 @@
                     </div>
                     <div class="text">
                       A <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
-                      Data Workload is a series of processes, that among other use cases, is used to utilise or change data from
+                      Data Workload is a series of processes used to utilise or change data from
                       both internal and external data sources in near-real-time. The goal of a Data Workload, is to automate the
                       flow of data between various stages of processing, such as data ingestion, cleaning, transformation, and
                       storage.
@@ -273,7 +273,7 @@
                     Planning Data Workloads
                 </div>
                 <div class="subtitle">
-                    Bringing the Business and IT together
+                    Decision maker driven execution
                 </div>
                 <div class="text">
                   We have built the bridge between wisdom & action by putting the ability to execute on the outcomes envisaged
@@ -303,11 +303,11 @@
                 </div>
                 <div class="text">
                   <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> allows
-                  you to create Data Workloads through a drag-and-drop interface, such as to directly update
+                  you to create Data Workloads through a drag-and-drop interface to directly update
                   data sources and quickly create new datasets, thus enabling the business to respond to events
                   with the required agility. This approach opens up to users who understand the business the
                   ability to make changes without the need to learn how to code or be dependent on a few
-                  code-capable data scientists.
+                  code-capable data engineers.
                 </div>
             </div>
         </div>
@@ -344,27 +344,21 @@
   <section id="section-8" class="pagesection reveal fade">
         <div class="content">
             <div class="visuals reveal fade">
-                <img src="img/databasecloud.svg" alt="" style="max-width: 300px;">
+                <img src="img/workflow-3-red-valluu.png" alt="" style="max-width: 300px;">
             </div>
             <div class="descriptions reveal fade">
                 <div class="title">
                     Using the Data Workload
                 </div>
                 <div class="subtitle">
-                    Fast scheduling with automated efficiencies
+                    Internal & external execution
                 </div>
                 <div class="text">
-                    With today’s solutions, once your Data Workload has been created, a complex change procedure is often required
-                    with numerous levels of approval from people who have no context as to the criticality of the timing.
-                    Additionally, current estimates show that up to 60% of all available compute capability is sat idle, with
-                    services holding compute resources even when they are not running.
-                    <br /><br />
-                    <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> allows you to
-                    quickly and easily schedule a workload when you need it, and it manages the compute environment to only use
-                    the resource whilst the workload is being run. Upon completion, it will automatically cleanse the footprint,
-                    ensuring that all resources are released for other use and the cost of IT is not increased. This fast scheduling
-                    can be done through Microsoft Teams or similar applications with simple natural-language commands – no need for
-                    complicated procedures or for you to get IT involved.
+                  <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> enables
+                  the user to leverage the Data Workload to not only interface in real-time with customers, but
+                  also make changes to the data source from the single control-point. This change-capability is
+                  revolutionary, making Valluu a next-generation Intelligent Business System that is the default
+                  interface for all data execution.
                 </div>
             </div>
         </div>
@@ -375,7 +369,7 @@
             <div class="content">
                 <div class="descriptions reveal fade">
                     <div class="title">
-                        Business in motion
+                        Business execution in motion
                     </div>
                     <div class="subtitle">
                         An example use-case
