--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -218,7 +218,7 @@
                             <br />
                             <span style="color: #E84249;"">CIO:</span> Create the ability to execute data changes by the business decision maker
                             <br />
-                            <span style="color: #E84249;"">CRO</span> Dynamically change pricing for customers
+                            <span style="color: #E84249;"">CRO:</span> Dynamically change pricing for customers
                             <br />
                             <span style="color: #E84249;"">CMO:</span> Create automated sales campaigns based on pricing changes
                             <br />
@@ -320,7 +320,7 @@
                     Releasing & cataloguing Data Workloads
                 </div>
                 <div class="subtitle">
-                    Execution Governance
+                    Execution governance
                 </div>
                 <div class="text">
                     <!--Uncontrolled and unregulated data utilisation is constantly advancing through ‘shadow IT’,
