Fix formatting issue

--- a/index.html
+++ b/index.html
@@ -183,9 +183,10 @@
                       <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> has
                       been built to transform your business to finally become a data-driven company. Today,
                       companies’ data is being used to achieve only more and more analysis, with minimal business
-                      execution capability. Valluu has been designed to cut through this inertia and allow the
-                      business decision maker to directly execute data changes, regardless of source, changing
-                      the outcome of the associated business transaction, to realise instant time-to-value.
+                      execution capability. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                      has been designed to cut through this inertia and allow the business decision maker to
+                      directly execute data changes, regardless of source, changing the outcome of the associated
+                      business transaction, to realise instant time-to-value.
                     </div>
                 </div>
             </div>
@@ -357,8 +358,8 @@
                   <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> enables
                   the user to leverage the Data Workload to not only interface in real-time with customers, but
                   also make changes to the data source from the single control-point. This change-capability is
-                  revolutionary, making Valluu a next-generation Intelligent Business System that is the default
-                  interface for all data execution.
+                  revolutionary, making <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                  a next-generation Intelligent Business System that is the default interface for all data execution.
                 </div>
             </div>
         </div>
