--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="text">
                       A <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
                       Data Workload is a series of processes used to utilise or change data from
-                      both internal and external data sources in near-real-time. The goal of a Data Workload, is to automate the
+                      both internal and external data sources in near-real-time. The goal of a Data Workload is to automate the
                       flow of data between various stages of processing, such as data ingestion, cleaning, transformation, and
                       storage.
                     </div>
