Changes as per BP

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Valluu" />
 
     <!-- Share throught links -->
-    <meta property="og:title" content="Valluu - Data Workload Democratization in Kubernetes" />
+    <meta property="og:title" content="Valluu - Data Workload Democratisation in Kubernetes" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.valluu.io/index.html" />
     <meta property="og:image" content="https://www.valluu.io/img/estimatorss.png" />
@@ -201,7 +201,7 @@
             <div class="content">
                 <div class="descriptions">
                     <div class="title">
-                        Data democratisation in practice
+                        Democratisation revolution
                     </div>
                     <div class="subtitle">
                         <p>
@@ -225,7 +225,7 @@
                             <br />
                             <span style="color: #E84249;"">Business Analyst:</span> Reduce complexity of business transactions
                             <br />
-                            <span style="color: #E84249;"">IT Systems Engineer:</span> Maximise the utility of the company’s information technology
+                            <span style="color: #E84249;"">IT Systems Engineer:</span> Maximise the utility of your IT
                             <br />
                             <span style="color: #E84249;"">Business Technologist:</span> Continuously optimise business transactions
                     </div>
@@ -278,10 +278,9 @@
                 </div>
                 <div class="text">
                   We have built the bridge between wisdom & action by putting the ability to execute on the outcomes envisaged
-                  by decision makers into their hands. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">'s
-                  single interface is utilised by all the users within the data management lifecycle, which creates a common
-                  way to collaborate on data-driven change. By creating this common way of approaching change to data, the
-                  potential for business transformation is limited only by the users’ imagination.
+                  by decision makers into their hands. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                  has a single interface for all user types, createing a common and collaborative approach for data execution.
+                  The potential for business transformation is limited only by the users’ imaginations.
                 </div>
             </div>
             <div class="visuals reveal fade">
