--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
                 <div class="descriptions">
                     <div class="title">
-                        What do we mean by a 'Data Workload'?
+                        What's a 'Data Workload'?
                     </div>
                     <div class="subtitle">
                         <p>Automate business execution
@@ -271,7 +271,7 @@
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
-                    Planning Data Workloads
+                    Planning
                 </div>
                 <div class="subtitle">
                     Decision maker driven execution
@@ -284,7 +284,7 @@
                 </div>
             </div>
             <div class="visuals reveal fade">
-                <img src="img/flow-pic-1.png" alt="" style="max-width: 300px;">
+                <img src="img/coding-4-red.png" alt="" style="max-width: 300px;">
             </div>
         </div>
     </section>
@@ -296,7 +296,7 @@
             </div>
             <div class="descriptions reveal fade">
                 <div class="title">
-                    Creating Data Workloads
+                    Creating
                 </div>
                 <div class="subtitle">
                     Execution without coding
@@ -317,7 +317,7 @@
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
-                    Releasing & cataloguing Data Workloads
+                    Releasing & cataloguing
                 </div>
                 <div class="subtitle">
                     Execution governance
@@ -348,7 +348,7 @@
             </div>
             <div class="descriptions reveal fade">
                 <div class="title">
-                    Using the Data Workload
+                    Using
                 </div>
                 <div class="subtitle">
                     Internal & external execution
@@ -369,7 +369,7 @@
             <div class="content">
                 <div class="descriptions reveal fade">
                     <div class="title">
-                        Business execution in motion
+                        Business execution
                     </div>
                     <div class="subtitle">
                         An example use-case
