Add table of estimated times and people

--- a/index.html
+++ b/index.html
@@ -187,6 +187,49 @@
                       has been designed to cut through this inertia and allow the business decision maker to
                       directly execute data changes, regardless of source, changing the outcome of the associated
                       business transaction, to realise instant time-to-value.
+                      <br /><br />
+                      <table style="margin-left: auto; margin-right: auto; text-align: center; column-gap: 10px;">
+                        <tr>
+                            <th></th>
+                            <th>Participants & Time Today</th>
+                            <th>Participants & Time with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"></th>
+                        </tr>
+                        <tr>
+                            <td>Plan</td>
+                            <td>∼ 4 people & 5 days</td>
+                            <td>∼ 3 people & 4 days</td>
+                        </tr>
+                        <tr>
+                            <td>Create</td>
+                            <td>∼ 6 people & 20 days</td>
+                            <td>∼ 1 person & 0.1 days</td>
+                        </tr>
+                        <tr>
+                            <td>Catalogue</td>
+                            <td>∼ 2 people & 4 days</td>
+                            <td>∼ 0 people & 0 days</td>
+                        </tr>
+                        <tr>
+                            <td>Release</td>
+                            <td>∼ 4 people & 2 days</td>
+                            <td>∼ 0 people & 0 days</td>
+                        </tr>
+                        <tr>
+                            <td>Use</td>
+                            <td>∼ 6 people & 2 days</td>
+                            <td>∼ 1 person & 0.1 days</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><b>22 people & 33 days</b></td>
+                            <td><b>5 people & 4.2 days</b></td>
+                        </tr>
+                      </table>
+                      <br />
+                      If you want to see a breakdown of your current operational costs & CO2 impact on the
+                      <span style="color: #62bda4;">CO<sub>2</sub> impact</span>, go to the Estimator section,
+                      choose your company size, and request a report. We can't quantify the impact on lost revenue
+                      opportunities as these are only limited by your imagination!
                     </div>
                 </div>
             </div>
