--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="title" style="margin-bottom: 20px;">Data Democratisation
             </div>
-            <div style="font-size: 1.5em; color: #ffffff; font-family: graphik-regular;">
+            <div style="font-size: 1.5em; color: #ffffff; font-family: graphik-regular; margin-right: 50px;">
               Revolutionise your business by putting data execution into the hands of the decision makers 
             </div>
             <div class="navigation">
@@ -188,7 +188,7 @@
                       directly execute data changes, regardless of source, changing the outcome of the associated
                       business transaction, to realise instant time-to-value.
                       <br /><br />
-                      <table style="margin-left: auto; margin-right: auto; text-align: center; column-gap: 10px;">
+                      <table style="margin-left: auto; margin-right: auto; text-align: center; border-spacing: 5px;">
                         <tr>
                             <th></th>
                             <th>Participants & Time Today</th>
@@ -226,7 +226,7 @@
                         </tr>
                       </table>
                       <br />
-                      If you want to see a breakdown of your current operational costs & CO2 impact on the
+                      If you want to see a breakdown of your current operational costs and
                       <span style="color: #62bda4;">CO<sub>2</sub> impact</span>, go to the Estimator section,
                       choose your company size, and request a report. We can't quantify the impact on lost revenue
                       opportunities as these are only limited by your imagination!
