--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <tr>
                             <th></th>
                             <th>Participants & Time Today</th>
-                            <th>Participants & Time with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"></th>
+                            <th>Participants & Time<br />with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"></th>
                         </tr>
                         <tr>
                             <td>Plan</td>
