Make website tweaks

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                       directly execute data changes, regardless of source, changing the outcome of the associated
                       business transaction, to realise instant time-to-value.
                       <br /><br />
-                      <table style="margin-left: auto; margin-right: auto; text-align: center; border-spacing: 5px;">
-                        <tr>
-                            <th></th>
+                      <table id="time_comp" style="margin-left: auto;text-align: center; border-spacing: 5px; width: 100%; max-width: 600px;">
+                        <tr style="color: #092168;">
+                            <th>Data Workload<br />Lifecycle stage</th>
                             <th>Participants & Time Today</th>
                             <th>Participants & Time<br />with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"></th>
                         </tr>
@@ -227,7 +227,7 @@
                       </table>
                       <br />
                       If you want to see a breakdown of your current operational costs and
-                      <span style="color: #62bda4;">CO<sub>2</sub> impact</span>, go to the Estimator section,
+                      <a href="#estimator" style="color: #62bda4;">CO<sub>2</sub> impact</a>, go to the Estimator section,
                       choose your company size, and request a report. We can't quantify the impact on lost revenue
                       opportunities as these are only limited by your imagination!
                     </div>
@@ -256,21 +256,21 @@
                         use <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> to
                         unlock the potential of their company's data for their own needs...
                             <br /> -->
-                            <span style="color: #E84249;"">COO:</span> Gain governance and control oversight of all data management
+                            <span style="color: #E84249; font-weight: bold;">COO:</span> Gain governance and control oversight of all data management
                             <br />
-                            <span style="color: #E84249;"">CFO:</span> Implement corrective investments and cost management decisions
+                            <span style="color: #E84249; font-weight: bold;">CFO:</span> Implement corrective investments and cost management decisions
                             <br />
-                            <span style="color: #E84249;"">CIO:</span> Create the ability to execute data changes by the business decision maker
+                            <span style="color: #E84249; font-weight: bold;">CIO:</span> Create the ability to execute data changes by the business decision maker
                             <br />
-                            <span style="color: #E84249;"">CRO:</span> Dynamically change pricing for customers
+                            <span style="color: #E84249; font-weight: bold;">CRO:</span> Dynamically change pricing for customers
                             <br />
-                            <span style="color: #E84249;"">CMO:</span> Create automated sales campaigns based on pricing changes
+                            <span style="color: #E84249; font-weight: bold;">CMO:</span> Create automated sales campaigns based on pricing changes
                             <br />
-                            <span style="color: #E84249;"">Business Analyst:</span> Reduce complexity of business transactions
+                            <span style="color: #E84249; font-weight: bold;">Business Analyst:</span> Reduce complexity of business transactions
                             <br />
-                            <span style="color: #E84249;"">IT Systems Engineer:</span> Maximise the utility of your IT
+                            <span style="color: #E84249; font-weight: bold;">IT Systems Engineer:</span> Maximise the utility of your IT
                             <br />
-                            <span style="color: #E84249;"">Business Technologist:</span> Continuously optimise business transactions
+                            <span style="color: #E84249; font-weight: bold;">Business Technologist:</span> Continuously optimise business transactions
                     </div>
                 </div>
               <div class="visuals">
@@ -423,7 +423,7 @@
                       to review their pricing and risk data to come up with a new pricing plan. The Underwriter
                       easily schedules the workload from Microsoft Teams and receives a notification when it
                       has finished running. The results are automatically stored in their library, ready to
-                      be applied. <em style="color: #E84249;">Watch the video below to see this use-case in more detail!</em>
+                      be applied. <em style="color: #092168;">Watch the video below to see this use-case in more detail!</em>
                     </div>
                     <a data-fancybox data-width="640" data-height="360" href="videos/introvideo.mp4">
                         <div class="subtitle " style="color:rgb(243, 152, 140);">
@@ -464,7 +464,7 @@
                         whilst
                         having the flexibility to run with on-premise & hybrid IT Infrastructure, straight out
                         of the
-                        box, with fully-automated setup.
+                        box, with fully-automated setup. <em style="color: #092168;">Watch the video below for a walkthrough of the solution.</em>
                     </div>
                     <!--
                     <div class="text">
@@ -622,7 +622,7 @@
                     <div>
 
                         <div id="welcome-note">
-                            <div class="subtitle">Getting Started</div>
+                            <div class="subtitle">Find out your savings</div>
                             <p>Please select your business size to estimate the savings that using <img
                                     src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
                                 could deliver to your business.
