--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!--
                 <a href="#estimator">
                     <div class="button navestimator">
-                        <image src="img/valluu-red.svg"></image> <span> estimator <i
+                        <image src="img/valluu-red.svg" alt="Valluu" ></image> <span> estimator <i
                                 class="fas fa-angle-right"></i></span>
                     </div>
                 </a>
@@ -168,7 +168,7 @@
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
-                    <image class="reveal fade" src="img/valluu-red.svg" style="max-height: 400px;"></image>
+                    <image class="reveal fade" src="img/valluu-red.svg" alt="Valluu" style="max-height: 400px;"></image>
                 </div>
                 <div class="descriptions">
                     <div class="title">
@@ -180,19 +180,19 @@
                         </p>
                     </div>
                     <div class="text">
-                      <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> has
+                      <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> has
                       been built to transform your business to finally become a data-driven company. Today,
                       companies’ data is being used to achieve only more and more analysis, with minimal business
-                      execution capability. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                      execution capability. <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                       has been designed to cut through this inertia and allow the business decision maker to
                       directly execute data changes, regardless of source, changing the outcome of the associated
                       business transaction, to realise instant time-to-value.
                       <br /><br />
-                      <table id="time_comp" style="margin-left: auto;text-align: center; border-spacing: 5px; width: 100%; max-width: 600px;">
+                      <table id="time_comp" style="margin-left: auto; text-align: left; border-spacing: 5px; width: 100%; max-width: 600px;">
                         <tr style="color: #092168;">
                             <th>Data Workload<br />Lifecycle stage</th>
                             <th>Participants & Time Today</th>
-                            <th>Participants & Time<br />with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"></th>
+                            <th>Participants & Time<br />with <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"></th>
                         </tr>
                         <tr>
                             <td>Plan</td>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="text">
                         <!-- Some examples of how different business users could
-                        use <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> to
+                        use <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> to
                         unlock the potential of their company's data for their own needs...
                             <br /> -->
                             <span style="color: #E84249; font-weight: bold;">COO:</span> Gain governance and control oversight of all data management
@@ -297,7 +297,7 @@
                         </p>
                     </div>
                     <div class="text">
-                      A <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                      A <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                       Data Workload is a series of processes used to utilise or change data from
                       both internal and external data sources in near-real-time. The goal of a Data Workload is to automate the
                       flow of data between various stages of processing, such as data ingestion, cleaning, transformation, and
@@ -321,7 +321,7 @@
                 </div>
                 <div class="text">
                   We have built the bridge between wisdom & action by putting the ability to execute on the outcomes envisaged
-                  by decision makers into their hands. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                  by decision makers into their hands. <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                   has a single interface for all user types, createing a common and collaborative approach for data execution.
                   The potential for business transformation is limited only by the users’ imaginations.
                 </div>
@@ -345,7 +345,7 @@
                     Execution without coding
                 </div>
                 <div class="text">
-                  <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> allows
+                  <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> allows
                   you to create Data Workloads through a drag-and-drop interface to directly update
                   data sources and quickly create new datasets, thus enabling the business to respond to events
                   with the required agility. This approach opens up to users who understand the business the
@@ -369,12 +369,12 @@
                     <!--Uncontrolled and unregulated data utilisation is constantly advancing through ‘shadow IT’,
                     resulting in inefficient set-ups which are restricted in potential and under-deliver in outcomes.
                     <br /><br />-->
-                    <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> provides
+                    <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> provides
                     a centralised collaboration focus, with all Data Workloads automatically aggregated into a library,
                     which is accessible through users’ profiles. Activity metadata is captured and visible in the
                     management dashboard so that administrators can monitor and guide system usage. Poor regulatory
                     management arising in the world of shadow IT exposes a company to the risk of large fines and
-                    associated brand damage; <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                    associated brand damage; <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                     cuts this risk with its built-in controls and facility for regulatory reporting.
                 </div>
             </div>
@@ -397,10 +397,10 @@
                     Internal & external execution
                 </div>
                 <div class="text">
-                  <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> enables
+                  <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> enables
                   the user to leverage the Data Workload to not only interface in real-time with customers, but
                   also make changes to the data source from the single control-point. This change-capability is
-                  revolutionary, making <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                  revolutionary, making <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                   a next-generation Intelligent Business System that is the default interface for all data execution.
                 </div>
             </div>
@@ -419,7 +419,7 @@
                     </div>
                     <div class="text">
                       Consider an insurance business losing renewals for second-car insurance.
-                      The Underwriter creates a Data Workload with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                      The Underwriter creates a Data Workload with <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                       to review their pricing and risk data to come up with a new pricing plan. The Underwriter
                       easily schedules the workload from Microsoft Teams and receives a notification when it
                       has finished running. The results are automatically stored in their library, ready to
@@ -456,7 +456,7 @@
                         Leveraging the future, now
                     </div>
                     <div class="text">
-                        <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> is
+                        <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> is
                         an intelligent business data management solution that utilises the latest
                         technologies, without requiring any integration or change to the existing business
                         applications.
@@ -541,7 +541,7 @@
                         Protecting today and the future
                     </div>
                     <div class="text">
-                        <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> is designed to leverage a company's investment
+                        <img src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px"> is designed to leverage a company's investment
                         in operational and information technologies. This achieves major operational efficiencies
                         through reduced labour time & maximisation of IT infrastructure.
                     </div>
@@ -624,7 +624,7 @@
                         <div id="welcome-note">
                             <div class="subtitle">Find out your savings</div>
                             <p>Please select your business size to estimate the savings that using <img
-                                    src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                                    src="img/valluu-red.svg" alt="Valluu" style="max-width: 45px; margin: 0px 0px 6px 0px">
                                 could deliver to your business.
                             </p>
                             <p>The estimation is based upon average data for the given business sizes.
@@ -667,7 +667,7 @@
                     </div>
                     <div id="display">
                         <div id="overview">
-                            <p class="header"><img src="img/valluu-red.svg" alt=""
+                            <p class="header"><img src="img/valluu-red.svg" alt="Valluu"
                                     style="max-width: 45px; margin: 0px 0px 6px 0px"> Cost Saving:</p>
                             <p class="v">$<span id="ptv-figure">0</span></p>
                             <!-- <p class="v">$<span id="ptv-figure">0</span> <span class="note">per annum</span></p> -->
@@ -686,9 +686,9 @@
                             <div>
                                 <h3 style="color: var(--vgreen); margin-top: 0;">Reduce CO<sub>2</sub> emissions
                                 </h3>
-                                <p>In running the <img src="img/valluu-red.svg" alt=""
+                                <p>In running the <img src="img/valluu-red.svg" alt="Valluu"
                                         style="max-width: 45px; margin: 0px 0px 6px 0px"> Data Workloads associated
-                                    with your inputs, <img src="img/valluu-red.svg" alt=""
+                                    with your inputs, <img src="img/valluu-red.svg" alt="Valluu"
                                         style="max-width: 45px; margin: 0px 0px 6px 0px"> could save
                                     you
                                     <span id="elec-saving" style="color: var(--vred);">0</span> kWh of electricity per annum.</b>
